<resources>
    <string name="app_name">Crowdroid</string>
    <string name="sina">Sina</string>
    <string name="tencent">Tencent</string>
    <string name="sohu">Sohu</string>
    <string name="netease">163</string>
    <string name="renren">RenRen</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add">Add</string>
    <string name="ok">OK</string>
    <string name="ng">NG</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="help">Help</string>
    <string name="reply">Reply</string>
    <string name="reply_all">Reply All</string>
    <string name="name">Name</string>
    <string name="tips_title">Feature realization and integrity</string>
    <string name="priority_normal">L</string>
    <string name="priority_middle">M</string>
    <string name="priority_high">H</string>
    <string name="reset">Reset</string>
    <string name="success">Success</string>
    <string name="history">History</string>
    <string name="clear">Clear</string>
    <string name="notification_direct">Direct Message</string>
    <string name="retweet_of_me">Retweet of Me</string>
    <string name="login_menu_add_account">ADD</string>
    <string name="login_menu_help">Help</string>
    <string name="login_menu_license">License</string>
    <string name="login_crowdroid_info">The microblogging system facing to the enterprise</string>
    <string name="login_register">Register</string>
    <string name="login">Login</string>
    <string name="login_more">Other Microblogging Server</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_new_tweet">New Tweet</string>
    <string name="menu_fullscreen">Full Screen</string>
    <string name="menu_display_tabs">Display Tabs</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_logout">Logout</string>
    <string name="home">Home</string>
    <string name="at_message">\@Message</string>
    <string name="direct_message_sent">Direct Message Sent</string>
    <string name="direct_message_alert_sent">DM Sent</string>
    <string name="direct_message_alert_received">DM Received</string>
    <string name="my_timeline">My Timeline</string>
    <string name="logout">Logout</string>
    <string name="update">New Tweet</string>
    <string name="user_search">User Search</string>
    <string name="keyword_search">Keyword Search</string>
    <string name="direct_message_received">Direct Message Received</string>
    <string name="user_timeline">User Timeline</string>
    <string name="favorite_timeline">Favorite Timeline</string>
    <string name="direct_update">Direct Message</string>
    <string name="profile">Profile</string>
    <string name="retweets_mention_me">Retweets</string>
    <string name="retweets_to_me">Retweets by others</string>
    <string name="retweets_by_me">Retweets by you</string>
    <string name="retweets_of_me">Your Tweets,retweeted</string>
    <string name="reply_history">Reply History</string>
    <string name="send_direct_message">Send Direct Message</string>
    <string name="casual_watch">Casual Watch</string>
    <string name="public_timeline">Public Timeline</string>
    <string name="hot_retweet_timeline">Hot Retweets</string>
    <string name="hot_followretweet_timeline">Hot FollowRetweets</string>
    <string name="group_list_timeline">Group Timeline</string>
    <string name="area_timeline">Area Timeline</string>
    <string name="hometimeline_tab">This timeline displays Home Timeline</string>
    <string name="atmessagetimeline_tab">This timeline displays the @Message.</string>
    <string name="direct_message_sent_tab">This timeline displays the direct messages that you sent.</string>
    <string name="my_timeline_tab">This is the timeline that shows all the messages you tweeted.</string>
    <string name="logout_tab">This is the tab that you can click to logout.</string>
    <string name="update_tab">Send your tweets.</string>
    <string name="usersearch_tab">You can search users.</string>
    <string name="keyword_search_tab">You can search timeline with keywords.</string>
    <string name="direct_message_received_tab">You can see the direct messages that other people sent to you.</string>
    <string name="user_timeline_tab">You can search users, then it will return the timeline of the user you search.</string>
    <string name="favorite_timeline_tab">It shows your favorite tweets.</string>
    <string name="direct_update_tab">Send direct messages.</string>
    <string name="profile_tab">You can see user profile.</string>
    <string name="retweets_to_me_tab">It shows the retweets posted by users you follow.</string>
    <string name="retweets_by_me_tab">It shows retweets posted by you.</string>
    <string name="retweets_of_me_tab">It shows tweets of you that have been retweeted by others.</string>
    <string name="reply_history_tab">This tab shows the reply history.</string>
    <string name="setting_language">Language</string>
    <string name="setting_auto_refresh">Auto Refresh</string>
    <string name="setting_auto_refresh_interval">Refresh Interval</string>
    <string name="setting_translation">Translation</string>
    <string name="setting_translation_auto">Auto Translation</string>
    <string name="setting_translation_engine">Translation Engine</string>
    <string name="setting_translation_add_auto_translation">Add Auto Translation</string>
    <string name="setting_translation_auto_translation_list">Translation Data List</string>
    <string name="setting_wallpaper">Wallpaper</string>
    <string name="setting_wallpaper_picture">Picture</string>
    <string name="setting_wallpaper_background_color">Color</string>
    <string name="setting_wallpaper_theme">Theme</string>
    <string name="setting_wallpaper_theme_list">Theme List</string>
    <string name="setting_wallpaper_theme_preview">Preview Picture</string>
    <string name="setting_wallpaper_theme_resolution">Resolution</string>
    <string name="setting_wallpaper_theme_size">Size</string>
    <string name="setting_wallpaper_theme_description">Description</string>
    <string name="login_cfb_description">What is Crowdroid for Business ?</string>
    <string name="login_cfb_description_detail">Crowdroid for Business is a enterprise social networking system suitable to Enterprise 2.0.</string>
    <string name="login_cfb_description_more">More>></string>
    <string name="view_private">View private letter records</string>
    <string name="feedback">Feedback</string>
    <string name="about">About</string>
    <string name="setting_background_color">Set the background color</string>
    <string name="setting_background_image">Background image settings</string>
    <string name="setting_check">Check for new version</string>
    <string name="setting_official_microblogging">Official</string>
    <string name="setting_preferences">Preferences</string>
    <string name="setting_microblogging">Microblog settings</string>
    <string name="setting_theme">Theme settings</string>
    <string name="setting_account_manage">Account</string>
    <string name="setting_notification">Notification</string>
    <string name="setting_notification_interval">Notification Interval</string>
    <string name="setting_notification_direct_message">Direct Message</string>
    <string name="setting_notification_at_message">\@ Message</string>
    <string name="setting_notification_general_message">General Message</string>
    <string name="more_app">Application Square</string>
    <string name="setting_font">Font</string>
    <string name="setting_font_color">Font Color</string>
    <string name="setting_font_size">Font Size</string>
    <string name="setting_filter">Filter</string>
    <string name="setting_keyword_filter">Keyword Filter</string>
    <string name="setting_add_keyword_filter">Add Keyword Filter</string>
    <string name="setting_keyword_filter_list">Keyword Filter Lists</string>
    <string name="setting_user_filter">User Filter</string>
    <string name="setting_add_user_filter">Add User Filter</string>
    <string name="setting_user_filter_list">User Filter Lists</string>
    <string name="setting_list">List</string>
    <string name="setting_list_add">Add List</string>
    <string name="setting_list_my_all_list">My All Lists</string>
    <string name="setting_list_warning1">No More Than Five Lists!</string>
    <string name="user_list">%s\'s all lists:</string>
    <string name="setting_gallery">Gallery</string>
    <string name="setting_account">Account</string>
    <string name="list_dialog">%s\'s list:</string>
    <string name="setting_more">More Settings</string>
    <string name="setting_crowdroid_for_business">Crowdroid for Business</string>
    <string name="setting_twitter">Twitter</string>
    <string name="setting_twitter_proxy">Twitter Proxy</string>
    <string name="setting_follow5">Follow5</string>
    <string name="setting_sina">Sina</string>
    <string name="setting_casual_watch">Casual Watch</string>
    <string name="setting_casual_watch_choose">Setting Casual Watch</string>
    <string name="setting_casual_watch_public">Public Timeline</string>
    <string name="setting_casual_watch_region">Region Search</string>
    <string name="setting_casual_watch_search">Keyword Search</string>
    <string name="setting_browse_mode">Browse Mode</string>
    <string name="setting_date">Setting Date</string>
    <string name="setting_broadcast">Information Notice</string>
    <string name="setting_auto_broadcast">Information Notice Settings</string>
    <string name="service_address_empty">Server Address Is Empty!</string>
    <string name="pin_code">Enter Pin-Code Here</string>
    <string name="application_name">Application: \ Crowdroid</string>
    <string name="developer">Developer: \</string>
    <string name="app_license">License: \</string>
    <string name="license_text">Copyright ©2009-2013 Anhui Opensource Software Inc. Licensed under the Apache License, Version 2.0 (the "License"); You may not use this file except in compliance with the License. You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0. Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.</string>
    <string name="check_update">Check Update</string>
    <string name="multi_tweet">Multi Tweet</string>
    <string name="followed">Followers</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="status">Status</string>
    <string name="comment">Comment</string>
    <string name="notification_unfollow">Unfollow</string>
    <string name="speech_language_selected">Speech Language Selected</string>
    <string name="album">Album</string>
    <string name="blog">Blog</string>
    <string name="share">Share</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wendesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
</resources>